
0.7 final release.  Includes fix for CVE-2006-0224 buffer overflow
discovered by Rosiello Security.  Details can be found at
http://www.rosiello.org/en/read_bugs.php?id=25
----------------------------------------------------------------------
Sun Feb  5 00:58:03 2006                        Michael Jennings (mej)

Fixed off-by-1 error in spiftool_join().
----------------------------------------------------------------------
Fri Feb 24 16:45:38 2006                        Michael Jennings (mej)

Make removal of options from argv[] optional and off by default.
Fixes Eterm problem with WM_COMMAND entries being empty.
----------------------------------------------------------------------
Thu Apr 20 16:44:39 2006                        Michael Jennings (mej)

Added mbuff and ustr to testing routines.

Fleshed out ustr class; doesn't do UTF-8 yet though.

Fixed array removal code.  I have no idea how that was working before.
----------------------------------------------------------------------
Tue Apr 25 10:19:10 2006                        Michael Jennings (mej)

Added sprintf() routines for string classes.

Began work on UTF-8/Unicode strings.
----------------------------------------------------------------------
Thu Jul 13 14:02:08 2006                        Michael Jennings (mej)

Added thread, mutex, and condition interfaces along with their
corresponding pthreads-based implementations.  Not quite done yet, and
not tested.

Added dynamically-loadable module object class along with
corresponding unit tests.  Appears to work fine.
----------------------------------------------------------------------
Mon Jul 24 01:47:44 2006                        Michael Jennings (mej)

Fix header installation for new headers.
----------------------------------------------------------------------
Fri Aug 18 13:05:31 2006                        Michael Jennings (mej)

By popular demand, a LICENSE file.
----------------------------------------------------------------------